--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,12 @@
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --primary: #c2644b;
+  --primary-hover: #b45339;
+  --color-white: #f4f4f4;
+  --bg-white: #fafcf5;
+  --color-black: #3d3d3d;
+  --green-dark: #6b705c;
+  --border-s: 16px;
+  --border-l: 48px;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -15,11 +21,14 @@ body {
   max-width: 100vw;
   overflow-x: hidden;
 }
-
+main {
+  max-width: 1440px;
+  margin: 0 auto;
+}
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  color: var(--color-black);
+  background: var(--bg-white);
+  font-family: Montserrat, Inter, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
