--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -49,7 +49,16 @@ a {
   color: inherit;
   text-decoration: none;
 }
-
+@media (max-width: 992px) {
+  main {
+    padding: 0 30px;
+  }
+}
+@media (max-width: 576px) {
+  main {
+    padding: 0 16px;
+  }
+}
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
