--- a/src/components/ui/button/button.module.css
+++ b/src/components/ui/button/button.module.css
@@ -100,3 +100,15 @@
   left: 150%;
   opacity: 1;
 }
+@media (max-width: 992px) {
+  .btn {
+    padding: 12px 20px;
+    font-size: 16px;
+  }
+}
+@media (max-width: 576px) {
+  .btn {
+    padding: 8px 12px;
+    font-size: 12px;
+  }
+}
