--- a/src/components/ui/heading/heading.module.css
+++ b/src/components/ui/heading/heading.module.css
@@ -23,3 +23,29 @@
 .white {
   color: var(--color-white);
 }
+@media (max-width: 992px) {
+  .h1 {
+    font-size: 48px;
+  }
+
+  .h2 {
+    font-size: 30px;
+  }
+
+  .h3 {
+    font-size: 24px;
+  }
+}
+@media (max-width: 576px) {
+  .h1 {
+    font-size: 36px;
+  }
+
+  .h2 {
+    font-size: 24px;
+  }
+
+  .h3 {
+    font-size: 16px;
+  }
+}
