--- a/src/app/layout.module.css
+++ b/src/app/layout.module.css
@@ -1,5 +1,9 @@
 .main {
   padding-top: 120px;
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  gap: 80px;
 }
 @media (max-width: 992px) {
   .main {
