Created a quick-add-cart section

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,6 +4,7 @@
   --color-white: #f4f4f4;
   --bg-white: #fafcf5;
   --color-black: #3d3d3d;
+  --green-light: #dce1cd;
   --green-dark: #6b705c;
   --color-border: #cecece;
   --border-s: 16px;
