--- a/src/components/ui/product-card/product-card.module.css
+++ b/src/components/ui/product-card/product-card.module.css
@@ -52,6 +52,14 @@
   flex-grow: 1;
 }
 
+.contentTop {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  align-items: center;
+  gap: 10px;
+}
+
 .category {
   font-size: 13px;
   color: var(--green-dark);
@@ -76,7 +84,6 @@
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-
   gap: 8px;
   height: 50px;
   margin-top: auto;
@@ -109,37 +116,16 @@
   height: 30px;
 }
 
-.favoriteButton {
-  position: absolute;
-  top: 12px;
-  right: 12px;
-  z-index: 2;
-  width: 40px;
-  height: 40px;
-  padding: 6px;
-  border: none;
-  border-radius: 50%;
-  background: var(--bg-white);
-  box-shadow: 0 4px 5px rgba(0, 0, 0, 0.3);
+.rating {
+  display: flex;
+  align-items: center;
+  gap: 6px;
 }
 
-.favoriteIcon {
-  width: 100%;
-  height: 100%;
-  fill: none;
-  stroke: var(--color-black);
-  stroke-width: 30;
-  transition: all 0.3s ease;
-}
-
-.favoriteIcon.filled {
-  fill: var(--primary);
-  stroke: var(--primary);
-}
-
-.favoriteIcon.filled path {
-  fill: var(--primary);
-  stroke: var(--primary);
+.ratingValue {
+  font-size: 16px;
+  font-weight: 500;
+  color: var(--green-dark);
 }
 
 @media (max-width: 992px) {
@@ -162,14 +148,6 @@
     font-size: 12px;
     font-weight: 400;
     padding: 4px 8px;
-  }
-
-  .favoriteButton {
-    top: 8px;
-    right: 8px;
-    width: 25px;
-    height: 25px;
-    padding: 3px;
   }
 
   .category {
@@ -197,5 +175,17 @@
 
   .originalPrice {
     font-size: 12px;
+  }
+
+  .ratingValue {
+    font-size: 14px;
+  }
+}
+@media (max-width: 340px) {
+  .contentTop {
+    flex-direction: column;
+    gap: 4px;
+    align-items: start;
+    height: 50px;
   }
 }
