--- a/src/components/logo/logo.module.css
+++ b/src/components/logo/logo.module.css
@@ -25,3 +25,16 @@
 .logoIcon svg {
   fill: var(--color-white);
 }
+@media (max-width: 992px) {
+  .logoIcon {
+    width: 30px;
+    height: 30px;
+  }
+
+  .logoText {
+    flex-direction: column;
+    gap: 0;
+    font-size: 16px;
+    line-height: 0.9;
+  }
+}
