--- a/src/components/layout/footer/footer.module.css
+++ b/src/components/layout/footer/footer.module.css
@@ -69,6 +69,7 @@
 .list a {
   text-decoration: none;
   transition: color 0.3s ease;
+  font-size: 16px;
 }
 
 .list a:hover {
@@ -139,6 +140,22 @@
     padding-bottom: 110px;
     text-align: center;
     justify-items: center;
+  }
+
+  .address {
+    font-size: 14px;
+  }
+
+  .subtitle {
+    font-size: 16px;
+  }
+
+  .contactList {
+    font-size: 14px;
+  }
+
+  .list a {
+    font-size: 14px;
   }
 
   .catalog {
