--- a/src/components/logo/logo.module.css
+++ b/src/components/logo/logo.module.css
@@ -34,6 +34,7 @@
   .logoText {
     flex-direction: column;
     gap: 0;
+    align-items: flex-start;
     font-size: 16px;
     line-height: 0.9;
   }
