--- a/src/components/sections/homepage/quick-add-cart/quick-add-cart.module.css
+++ b/src/components/sections/homepage/quick-add-cart/quick-add-cart.module.css
@@ -51,8 +51,8 @@
 
 .imageWrapper {
   position: relative;
-  width: 100%;
-  height: 100%;
+  width: calc(100% + 80px);
+  height: calc(100% + 80px);
 }
 
 .image {
@@ -88,7 +88,6 @@
   font-size: 19px;
   font-weight: 400;
   border-radius: 9999px;
-  cursor: pointer;
   transition: all 0.3s ease-in-out;
   border: 2px solid var(--primary);
   background-color: transparent;
@@ -153,6 +152,7 @@
   }
 
   .imageWrapper {
+    width: 100%;
     height: 200px;
   }
 
