--- a/src/components/layout/footer/footer.module.css
+++ b/src/components/layout/footer/footer.module.css
@@ -2,6 +2,8 @@
   background-color: var(--green-dark);
   border-radius: var(--border-l) var(--border-l) 0 0;
   overflow: hidden;
+  position: relative;
+  z-index: 100;
 }
 
 .container {
