Created a block of product reviews

--- a/src/components/sections/product/info/product-info.module.css
+++ b/src/components/sections/product/info/product-info.module.css
@@ -39,6 +39,11 @@
 .reviewsCount {
   color: var(--green-dark);
   font-size: 16px;
+  transition: color 0.2s;
+}
+
+.reviewsCount:hover {
+  color: var(--color-black);
 }
 
 .priceBlock {
