--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,6 +11,7 @@
   --border-s: 16px;
   --border-l: 48px;
   --box-shadow-m: 0 4px 5px rgba(0, 0, 0, 0.3);
+  --box-shadow-s: 0 4px 20px rgba(0, 0, 0, 0.06);
 }
 @media (max-width: 992px) {
   :root {
